--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>PresuPro V3</title>
     <link rel="manifest" href="manifest.json">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="app.js"></script>
     <style>
         body { font-family: -apple-system, sans-serif; background-color: #f8fafc; }
         .hidden { display: none; }
@@ -83,3 +83,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
