--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>PresuPro V3</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./app.js?v=final"></script>
     <style>
         body { font-family: -apple-system, sans-serif; background-color: #f1f5f9; }
         .hidden { display: none; }
@@ -55,3 +55,4 @@
                 <button onclick="abrirPrompt('techos')" class="bg-white p-4 rounded-2xl shadow-sm border border-slate-100 flex flex-col items-center"><span class="text-2xl mb-1">🏠</span><span class="text-[10px] font-bold">Techos</span></button>
                 <button onclick="abrirPrompt('cajones')" class="bg-white p-4 rounded-2xl shadow-sm border border-slate-100 flex flex-col items-center"><span class="text-2xl mb-1">📦</span><span class="text-[10px] font-bold">Cajones</span></button>
                 <button onclick="abrirPrompt('tabicas')" class="bg-white p-4 rounded-2xl shadow-sm border border-slate-100 flex flex-col items-center"><span class="text-2xl mb-1">📐</span><span class="text-[10px] font-bold">Tabicas</span></button>
+
